# vibe-coding-workshop-template

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  PRE-REQUISITE-v2.md  QUICKSTART.md  README.md  SECURITY.md  app.yaml  env.example  pyproject.toml
.cursor/rules/: 02-databricks-asset-bundles.mdc  05-unity-catalog-constraints.mdc  21-self-improvement.mdc  MONITORING_CONSOLIDATION_SUMMARY.md  ORCHESTRATOR_RULE_IMPROVEMENTS.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  RULES_QUALITY_IMPROVEMENTS_SUMMARY.md  RULE_IMPROVEMENT_LOG.md
agent_skills/: README.md  __init__.py  engine.py  models.py  prd_mapper.py  registry.py  router.py  skill_registry.yaml
agent_skills/executors/: __init__.py  base.py  function_executor.py  genie_executor.py  lakebase_executor.py  llm_executor.py  prompt_registry_executor.py  web_search_executor.py
agent_skills/flows/: assistant_search.yaml  standard_search.yaml
agent_skills/skills/genie_search/: manifest.yaml
agent_skills/skills/lakebase_search/: manifest.yaml
agent_skills/skills/location_extractor/: manifest.yaml
agent_skills/tests/: __init__.py  test_engine.py  test_executors.py  test_registry.py
agentic-framework/agents/: agent-tester.md  agent-ui-wiring-prompt.md  databricks-deployer.md  multi-agent-build-prompt.md  prd-analyzer.md  prd-template.md  skill-scaffolder.md  tool-builder.md
agentic-framework/foundation-model-agent-loop/: SKILL.md
apps_lakebase/scripts/: deploy.sh  lakebase_manager.py  run_local.sh  setup-lakebase.sh  watch.sh
client/: package-lock.json  package.json
client/src/: App.tsx  index.css
client/src/pages/: HomePage.tsx  (+4 more)
context/: README.md
context/prompts/: README.md
db/lakebase/: README.md
docs/: design_prd.md  ui_design.md
scripts/: app_status.sh  deploy.sh  fix.sh  generate_requirements.py  lakebase_manager.py  setup-lakebase.sh  setup.sh
server/: app.py
server/routers/: health.py
(+11 files in other folders)
